# lecture3

./: README.md  lecture3.cabal
src/: Lecture3.hs
